# Notes-rag

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: schemas.py
app/generation/: pipeline.py  prompts.py  study.py
app/ingestion/: chunker.py  html_parser.py  pipeline.py  types.py
app/models/: base.py  chatters.py  embedders.py  factory.py
app/retrieval/: faiss_store.py  reranker.py  retriever.py  store.py
app/utils/: retry.py
tests/: test_models.py
