[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.115.1",
    "beautifulsoup4>=4.15.0",
    "google-generativeai>=0.8.6",
    "lxml>=6.1.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
